# ocsf-schema-compiler

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml  test-publish.yaml
docs/: legacy_format.md  publishing.md
scripts/: pre-publish-check.sh
src/ocsf_schema_compiler/: __init__.py  __main__.py  compiler.py  jsonish.py  legacy_mode.py  structured_read.py  utils.py
tests/: diff.py  test_expected_changes.py  test_regressions.py
tests/compiled-baselines/: README.md  browser-schema-v1.6.0.zst
