[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ocsf_schema_compiler"
authors = [{name = "Rick Mouritzen", email = "rick@rickmode.com"}]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
keywords = ["compiler", "ocsf", "schema", "ocsf-schema"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.14"

[project.urls]
Home = "https://github.com/ocsf/ocsf-schema-compiler"
Repository = "https://github.com/ocsf/ocsf-schema-compiler.git"
Issues = "https://github.com/ocsf/ocsf-schema-compiler/issues"

[project.scripts]
ocsf-schema-compiler = "ocsf_schema_compiler.__main__:main"

[project.optional-dependencies]
dev = ["basedpyright", "ruff"]

# This project uses basedpyright rather than pyright. This is for two reasons:
#   1. I uses vscodium, and the M$ proprietary PyLance extension does not work in
#      vscodium. The basedpyright extension is the current best alternative.
#   2. The rules and defaults in basedpyright are bit more strict.
[tool.basedpyright]
# Not sure if implicit string concatenation is a great idea,
# but I prefer to keep all code lines below the line-length maximum
# (and ruff lint is configured above to enforce this).
# TODO: Consider converting to explicit string concatenation
#       print(
#           "This is a long"
#           + " string"
#       )
reportImplicitStringConcatenation = false

[tool.ruff.lint]
# E501 includes long strings in line-length checks.
#      https://docs.astral.sh/ruff/rules/line-too-long/
# W505 includes long comments in line-length checks when enabled by setting below
#      https://docs.astral.sh/ruff/rules/doc-line-too-long/
extend-select = ["E501", "W505"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = false
